fixed view on mobile

--- a/src/pages/Options/Home/MarketHeader/media.scss
+++ b/src/pages/Options/Home/MarketHeader/media.scss
@@ -30,8 +30,13 @@
         }
         &__logoWrapper {
             display: flex !important;
+            &__burger {
+                right: 10px !important;
+            }
             &__logo {
                 height: 32px !important;
+                width: 134px !important;
+                margin-right: 6px !important;
             }
         }
     }
@@ -39,18 +44,24 @@
 
 @media screen and (max-width: 767px) {
     .dapp-header {
-        height: 120px !important;
+        height: 156px !important;
         padding-right: 0 !important;
         flex-direction: column;
-        .dapp-header__logoWrapper__burger {
-            right: 10px;
-        }
 
         margin-top: 40px !important;
         &__logoWrapper {
             align-self: flex-start;
             &__burger {
                 top: 44px !important;
+            }
+        }
+        &__buttonsWrapper {
+            flex-direction: column-reverse;
+            .dapp-header__userInfo {
+                margin: 20px 0;
+            }
+            button {
+                margin: auto;
             }
         }
     }
